--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body {
   background-color: #fff8ff;
   box-sizing: border-box;
   font-family: "Josefin Sans", sans-serif;
-  overflow-x: hidden;
 }
 
 h2 {
@@ -34,6 +33,97 @@ h3,
   font-family: "Great Vibes", cursive;
   color: #c405a4;
   text-align: center;
+}
+
+::selection {
+  color: #20001a;
+  background: #c405a4;
+}
+
+nav {
+  height: 0;
+}
+
+#menu {
+  display: block;
+  position: fixed;
+  top: 50px;
+  left: 50px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+#menu a {
+  text-decoration: none;
+  color: #c405a4;
+  transition: color 0.3s ease;
+}
+#menu a:hover {
+  color: #20001a;
+}
+#menu input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+  -webkit-touch-callout: none;
+}
+#menu span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #c405a4;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+#menu span:first-child {
+  transform-origin: 0% 0%;
+}
+#menu span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+#menu input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #c405a4;
+}
+#menu input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+#menu input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+#menu input:checked ~ ul {
+  transform: none;
+}
+
+#menu__list {
+  position: fixed;
+  width: 100%;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  text-align: center;
+  background: #000000;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+#menu__list li {
+  padding: 10px 0;
+  font-size: 22px;
 }
 
 .container {
@@ -109,7 +199,6 @@ h3,
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  border-radius: 5px;
   display: grid;
   padding: 5rem 8rem;
   justify-content: baseline;
@@ -236,6 +325,7 @@ h3,
   font-size: 2rem;
   display: grid;
   justify-content: left;
+  padding: 0.2rem 0;
 }
 .category__cta {
   background-color: #c405a4;
@@ -257,6 +347,7 @@ h3,
   background-repeat: no-repeat;
   background-size: cover;
   gap: 1rem;
+  overflow-x: hidden;
 }
 .banner__details {
   color: #fff8ff;
@@ -323,10 +414,13 @@ h3,
 }
 
 .testimonials {
-  padding: 5rem 0;
+  padding: 4rem 0;
+}
+.testimonials__title {
+  padding-bottom: 0;
 }
 .testimonials__cell {
-  height: 50vh;
+  height: 40vh;
   width: 25vw;
   display: grid;
   align-content: center;
@@ -353,8 +447,7 @@ h3,
   display: grid;
   gap: 3rem;
   padding: 5rem;
-  background-color: #000000;
-  border-bottom: 1rem solid #ffffff;
+  background-color: #20001a;
 }
 
 footer {
