--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 $color-primary: #c405a4;
+$color-primary-dark: #20001a;
 $color-white: #ffffff;
 $color-pink-transparent: #f941ff57;
 $color-black: #000000;
@@ -18,7 +19,6 @@ body {
   background-color: $color-paragraph;
   box-sizing: border-box;
   font-family: "Josefin Sans", sans-serif;
-  overflow-x: hidden;
 }
 
 h2 {
@@ -43,6 +43,124 @@ h3,
   text-align: center;
 }
 
+::selection {
+  color: $color-primary-dark;
+  background: $color-primary;
+}
+
+//MENU
+nav {
+  height: 0;
+}
+
+#menu {
+  display: block;
+  position: fixed;
+  top: 50px;
+  left: 50px;
+
+  z-index: 1;
+
+  -webkit-user-select: none;
+  user-select: none;
+
+  & a {
+    text-decoration: none;
+    color: $color-primary;
+
+    transition: color 0.3s ease;
+
+    &:hover {
+      color: $color-primary-dark;
+    }
+  }
+
+  & input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+
+    cursor: pointer;
+
+    opacity: 0;
+    z-index: 2;
+
+    -webkit-touch-callout: none;
+  }
+
+  & span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+
+    background: $color-primary;
+    border-radius: 3px;
+
+    z-index: 1;
+
+    transform-origin: 4px 0px;
+
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+
+    &:first-child {
+      transform-origin: 0% 0%;
+    }
+
+    &:nth-last-child(2) {
+      transform-origin: 0% 100%;
+    }
+  }
+
+  & input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: $color-primary;
+  }
+
+  & input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+
+  & input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+
+  & input:checked ~ ul {
+    transform: none;
+  }
+}
+
+#menu__list {
+  position: fixed;
+  width: 100%;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  text-align: center;
+
+  background: $color-black;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+
+  & li {
+    padding: 10px 0;
+    font-size: 22px;
+  }
+}
+
+//Site
 .container {
   display: grid;
   grid-template-rows: min-content;
@@ -133,7 +251,6 @@ h3,
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    border-radius: 5px;
     display: grid;
     padding: 5rem 8rem;
     justify-content: baseline;
@@ -254,6 +371,7 @@ h3,
     font-size: 2rem;
     display: grid;
     justify-content: left;
+    padding: 0.2rem 0;
   }
 
   &__cta {
@@ -277,6 +395,7 @@ h3,
   background-repeat: no-repeat;
   background-size: cover;
   gap: 1rem;
+  overflow-x: hidden;
 
   &__details {
     color: $color-paragraph;
@@ -347,10 +466,14 @@ h3,
 }
 
 .testimonials {
-  padding: 5rem 0;
+  padding: 4rem 0;
+
+  &__title {
+    padding-bottom: 0;
+  }
 
   &__cell {
-    height: 50vh;
+    height: 40vh;
     width: 25vw;
     display: grid;
     align-content: center;
@@ -381,8 +504,7 @@ h3,
   display: grid;
   gap: 3rem;
   padding: 5rem;
-  background-color: $color-black;
-  border-bottom: 1rem solid $color-white;
+  background-color: $color-primary-dark;
 }
 
 footer {
@@ -460,7 +582,7 @@ footer {
     }
   }
 
-  .main-carousel__cell{
+  .main-carousel__cell {
     padding: 5rem 4rem;
   }
 }
