--- a/css/style.css
+++ b/css/style.css
@@ -661,6 +661,13 @@ footer span {
     padding: 2rem;
     gap: 1rem;
   }
+  .recommendations {
+    grid-template-columns: 1fr 1fr;
+  }
+  .recommendations__title {
+    grid-column: 1/3;
+    margin-bottom: 2rem;
+  }
   .about__paragraphs {
     padding: 4rem;
   }
