--- a/scss/style.scss
+++ b/scss/style.scss
@@ -748,6 +748,15 @@ footer {
     gap: 1rem;
   }
 
+  .recommendations {
+    grid-template-columns: 1fr 1fr;
+
+    &__title {
+      grid-column: 1/3;
+      margin-bottom: 2rem;
+    }
+  }
+
   .about__paragraphs {
     padding: 4rem;
   }
